tests/ui/boolean_enforcement/fail/filter_int_condition.stderr
error[E0277]: `Int4` is not a boolean SQL type
  --> tests/ui/boolean_enforcement/fail/filter_int_condition.rs:14:49
   |
14 |     let _ = count_all::<PostgresValue>().filter(user.age);
   |                                          ------ ^^^^^^^^ logical operations require a boolean-typed expression
   |                                          |
   |                                          required by a bound introduced by this call
   |
   = help: the trait `BooleanLike` is not implemented for `Int4`
help: the following other types implement trait `BooleanLike`
  --> types/src/sql/mod.rs
   |
   | impl BooleanLike for crate::sqlite::types::Integer {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::sqlite::types::Integer`
...
   | impl BooleanLike for crate::postgres::types::Boolean {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `drizzle::postgres::types::Boolean`
note: required by a bound in `drizzle::core::expr::window::<impl SQLExpr<'a, V, T, N, Agg>>::filter`
  --> core/src/expr/window.rs
   |
   |     pub fn filter<C>(self, condition: C) -> SQLExpr<'a, V, T, N, Agg>
   |            ------ required by a bound in this associated function
...
   |         C::SQLType: BooleanLike,
   |                     ^^^^^^^^^^^ required by this bound in `drizzle::core::expr::window::<impl SQLExpr<'a, V, T, N, Agg>>::filter`
